@@ -36,14 +36,14 @@ draw (cairo_t *cr, int width, int height)
 {
     cairo_pattern_t *gradient;
 
-    gradient = cairo_pattern_create_linear (0, 0,
+    gradient = cairo_pattern_create_linear (0, -height,
 					    0, height);
     cairo_pattern_add_color_stop (gradient, 0.0,
-				  .2, .4, .6,
+				  1.0, 0.0, 0.0,
 				  1.0);
     cairo_pattern_add_color_stop (gradient, 1.0,
-				  .2, .4, .6,
-				  0.0);
+				  0.0, 0.0, 1.0,
+				  0.5);
 
     cairo_set_pattern (cr, gradient);
 
